# gtfs-realtime-performance

./: .gitignore  Dockerfile  LICENSE  Makefile  Private_LICENSE.txt  README.md  TODO.md  TODOs.md  docker-compose.yml  external_README.md  plans.md  process_feeds.sh  pyproject.toml  requirements.txt  run_feeds.sh  run_speeds_batch.py  runner.py  setup.py  test_process.sh  tracker.py  tracker_README.md
.devcontainer/: devcontainer.json
application/: APP_README.md  app_reademe.md  demo.py  todo.md  tracker.py
data/: congestion_zone_boundary.geojson
data/chart-speeds/: control_speeds.parquet  treatment_speeds.parquet
data/map-segments/: mdb-512_B39_unique_segments.geojson  mdb-513_M102_unique_segments.geojson  mdb-513_M50_unique_segments.geojson  mdb-514_SIM24_unique_segments.geojson  mdb-514_SIM4X_unique_segments.geojson
notebooks/: UN_week.ipynb  bus_day.ipynb  bus_day_old.ipynb  bus_functions.ipynb  bus_nta.ipynb  bus_speeds.ipynb  congestionPricing_bus_speed.ipynb  congestionPricing_travel_time.ipynb  feed_match.ipynb  flood_sensor_map.ipynb  gtfs_speed_floo_route_viz.ipynb  holidays.ipynb  mta_speed_data.ipynb  process_by_day.ipynb  process_from_s3.ipynb  process_from_s3_use_cases.ipynb  process_from_s3datalake.ipynb  process_storm_data.ipynb  slowest_days.ipynb  speed_tracker_aggregation.ipynb  speed_tracker_data.ipynb  speed_tracker_visualization.ipynb
spark/: README.md  config.py  run_speed_calculation.py  speed_calculator.py
src/: api.py  gtfs_segments.py  logger.py  process_batch.py  s3.py  speed_calculator.py  speeds.py  speeds_batch.py  utils.py
(+20 files in other folders)
