[project]
name = "gtfs-realtime-performance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.35.92",
    "contextily>=1.6.2",
    "fastparquet>=2024.11.0",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.6",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotnine>=0.14.5",
    "pyarrow>=18.1.0",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
]
